plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

repositories {
    mavenCentral()
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

sourceSets {
    main {
        java {
            srcDir '../src/main/java'
        }
    }
}

javafx {
    version = '21.0.4'
    modules = ['javafx.controls', 'javafx.graphics', 'javafx.fxml']
}

dependencies {
    implementation 'com.google.code.gson:gson:2.11.0'
    compileOnly 'org.projectlombok:lombok:1.18.34'
    annotationProcessor 'org.projectlombok:lombok:1.18.34'

    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
}

application {
    mainClass = 'com.issuetracker.ui.App'
}

test {
    useJUnitPlatform()
}

run {
    workingDir = file('..')
    jvmArgs = [
        '--enable-native-access=ALL-UNNAMED'
    ]
}
